--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <button style="background-color: black; border-style: none;">L</button>
     <script>
       var urlObj = new window.URL(window.location.href);
-      var url = "https://bottledcd.github.io/GameWebsite/";
+      var url = "https://bottledcd.github.io/websitelogin/main.html";
       if (url) {
         var win;
  
